--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,11 +2,11 @@
   "short_name": "React App",
   "name": "Create React App Sample",
   "icons": [
-    {
-      "src": "favicon.ico",
-      "sizes": "192x192",
-      "type": "image/png"
-    }
+    // {
+    //   "src": "",
+    //   "sizes": "",
+    //   "type": ""
+    // }
   ],
   "start_url": "./index.html",
   "display": "standalone",
